@@ -23,6 +23,8 @@ Changes since 1.4.0-rc3:
 * Fixed race condition concerning the ec_slave_config_state->operational flag.
 * Fixed wrong calculation of the expected working counter if the process data
   of a domain span several datagrams.
+* Fixed a kernel oops when a slave configuration is detached while the actual
+  configuration is in progress.
 * Fixed typo in logging output.
 
 Changes in 1.4.0-rc3:
